# form_extract

./: app.py  form_extraction.py  models_form.py  pyproject.toml
.streamlit/: config.toml
